[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "byungeom"
version = "5.0.0"
description = "Multi-face code synthesis — where LLMs debate so your code doesn't break"
authors = [
    { name = "seedrisecenter-maker" }
]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
gemini = ["google-genai>=1.0"]
gpt = ["openai>=1.0"]
analysis = ["ruff", "bandit"]
all = ["google-genai>=1.0", "openai>=1.0", "ruff", "bandit"]

[project.urls]
Homepage = "https://github.com/seedrisecenter-maker/byungeom"
Repository = "https://github.com/seedrisecenter-maker/byungeom"

[tool.setuptools.packages.find]
where = ["."]
include = ["byungeom*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
