[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "byungeom"
version = "5.0.0"
description = "變臉 正反合 code verification library"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
gemini = ["google-generativeai>=0.8.0"]
analysis = ["ruff>=0.5.0", "bandit>=1.7.0"]
all = ["google-generativeai>=0.8.0", "ruff>=0.5.0", "bandit>=1.7.0"]

[tool.setuptools.packages.find]
where = [".."]
include = ["byungeom*"]
